static/bnSubmission/styles/style.css
#submission-form {
    width: 250px;
    margin: 5px;
}

@media only screen and (max-width: 700px) {
    .sketch-grid-container {
        margin-left: auto !important;
        margin-right: auto !important;
        grid-template-columns: 1fr !important;
        grid-template-rows: repeat(3, 1fr) !important;
        grid-column-gap: 0px !important;
        grid-row-gap: 0px !important;;
        width: 400px !important;
        height: 1000px !important;
    }
}

.sketch-grid-container {
    margin: auto;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    width: 700px;
    height: 500px;
    justify-items: center;
}

.sketch-div { 
    grid-area: 1 / 1 / 3 / 2; 
    width: 350px;
}

.vote-form-div { 
    margin:auto;
    grid-area: 1 / 2 / 2 / 3; 
    text-align: center;
    width: 400px;
}

.voted-history-div { 
    grid-area: 2 / 2 / 3 / 3; 
} 

@media only screen and (max-width: 700px) {
    .sketch-div { 
        grid-area: 1 / 1 / 2 / 2 !important;
    }
}
@media only screen and (max-width: 700px) {
    .vote-form-div { 
        grid-area: 2 / 1 / 3 / 2 !important;
    } 
}
@media only screen and (max-width: 700px) {
    .voted-history-div { 
        grid-area: 3 / 1 / 4 / 2 !important;
    } 

}

.sketch-holder {
    height: 500px;
}

.selected {
    margin-top: 25px;
    width: 340px;
    margin-bottom: 25px;
    text-align: center;
}

@media only screen and (max-width: 700px) {
    .selected {
        margin-top: -150px !important;
    }
}

#bandnames {
    width: inherit !important;
    max-height: 650px;
    min-height: 250px;
}

#vote-form {
    text-align: center;
}
  
#faq-div {
    text-align: center;
    margin-left: 20%;
    margin-right: 20%;
}

#bandname-submit {
    margin-left: 0px !important;
    margin-right: 0px !important;
    margin-top: 5px !important;
    margin-bottom: 0px !important;   
}

